Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.09.2022 08:39:09</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.09.2022 09:19:29</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Pátek, 02. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kari se zeleninou a hovězím masem</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený hermelín s vařeným bramborem a tatarkou</strong>
+<strong>Kuřecí stehno na smetaně s těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							147,-
+							143,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na cesneku a cibulce s těstovinou</strong>
+<strong>Dukátové Buchtičky s vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							119,-
 						</span>
 </p>
 <p>
-<strong>Staročeské zadělávané Dršťková s pečeným bramborem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: toskánská kuřecí prsa, Tilapie s rajčaty, zelenina, rýže, pečený brambor,</strong>
+<strong>TEPLÝ BUFET: pečený brambor, kotlety s barbecue omáčkou, Tilapie se žampiony, ryze, zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: červená řepa s kozím sýrem, míchaná zelenina</strong>
+<strong>SALÁTY: Caesar, Míchaný s paprikový dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -130,7 +123,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu s petrzelkou {hejk, treska, sled}, koprovo-citronova jogurtova omacka, stouchane brambory s porkem, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s koprovo-citronovou jogurtovou omackou, stouchane brambory s porekm, salatek z cervene repy 179</li><li>Lasagne s hovezim a krutim masem, rajcaty, bazalkou a pecenymi paprikami zapecene ve smetanove omacce, salatek {L} 155</li><li>Pecene kachni stehno na pomerancich a zazvoru, pecena chilli dyne, salatek 175</li><li>Wrap s pecenou cervenou repou a gorgonzollou, avokadove guacamole, korenena ryze, salatek {L} 155</li></ol>
+<ol><li>Peceny filet z norskeho slede s francouzskym dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou 155</li><li>Smazeny filet z cerstve norske tresky, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou, citron 179</li><li>Thajske pikantni restovane veprove s cuketami, chilli, cesnekem a zelenymi bylinkami, ryzove nudle</li><li>Rostbif z hoveziho orechu s peprovou omackou, gratinovane brambory, salatek {L} 179</li><li>Imam bayildi – zapeceny lilek po turecku plneny rajcaty s cibulkou, bazalkou a balkanskym syrem, jasminova ryze, salatek 155</li></ol>
 </td>
 </tr>
 </table>
