--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.09.2022 09:19:29</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.09.2022 09:41:58</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -123,7 +123,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s francouzskym dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou 155</li><li>Smazeny filet z cerstve norske tresky, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou, citron 179</li><li>Thajske pikantni restovane veprove s cuketami, chilli, cesnekem a zelenymi bylinkami, ryzove nudle</li><li>Rostbif z hoveziho orechu s peprovou omackou, gratinovane brambory, salatek {L} 179</li><li>Imam bayildi – zapeceny lilek po turecku plneny rajcaty s cibulkou, bazalkou a balkanskym syrem, jasminova ryze, salatek 155</li></ol>
+<ol><li>Peceny filet z norskeho slede s francouzskym dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou 155</li><li>Smazeny filet z cerstve norske tresky, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou, citron 179</li><li>Thajske pikantni restovane veprove s cuketami, chilli, cesnekem a zelenymi bylinkami, ryzove nudle 155</li><li>Rostbif z hoveziho orechu s peprovou omackou, gratinovane brambory, salatek {L} 179</li><li>Imam bayildi – zapeceny lilek po turecku plneny rajcaty s cibulkou, bazalkou a balkanskym syrem, jasminova ryze, salatek 155</li></ol>
 </td>
 </tr>
 </table>
