Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.09.2022 08:11:20</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.09.2022 09:20:41</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 06. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Dršťková</strong>
+<strong>Bramborová se zázvorem a koriandrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Záhorácký závitek s vařeným bramborem</strong>
+<strong>Rajská hovězí pečeně s houskovým knedlíkem NEBO těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							147,-
+						</span>
+</p>
+<p>
+<strong>Pikantní Tomatová fazole se zeleninou a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Špagety s krémovou omáčkou, restovanou slaninou a sýrem</strong>
+<strong>Caesar salát s kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie na žampionech, kotleta na kmíně, ryze, zelenina, pečený brambor</strong>
+<strong>TEPLÝ BUFET: Tilapie na Smetanové cibulce a slanině, pečený brambor, ryze, zelenina, kuřecí špalky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kuskus se žampiony a zeleninou, rajčatový</strong>
+<strong>SALÁTY: kuskus se zeleninou a žampiony, rajčatový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -52,7 +59,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 6.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, ostružinami a drobenkou</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Makovec s citrónovou polevou</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Pavlova roláda  (bez lepku) </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí vývar s nudlemi, masem a zeleninou v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí vývar s nudlemi, masem a zeleninou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná špenátem a vajíčkem, bramborová kaše, polníček, ředkvička <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Kuskus salát s grilovanou vepřovou panenkou, sušenými rajčaty a medovo-hořčičným dresingem  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Portobello žampion zapečený s ratatouille zeleninou a parmazánem, opečený brambor chilli dip, rukola <em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +145,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s omackou Puttanesca {rajcata, bazalka, ancovicky, kapary a olivy}, zeleninovy kuskus, salatek {L} 155</li><li>Peceny filet z cerstve tresky tmave a candata s omackou Puttanesca, zeleninovy kuskus, salatek {L} 179</li><li>Fajita s krutim masem, pecenymi palivymi paprikami a goudou, korenena ryze, jogurtovy dip, salatek {L} 155</li><li>Grilovane medailonky z australske hovezi plece a koroptvich prsou s gorgonzollovou omackou, gratinovane brambory, salatek 185</li><li>Pecena dyne a papriky zapecene s goudou a bylinkami, korenena ryze, jogurtovy dip, salatek 155 </li></ol>
+<ol><li>Thieboudienne – senegalska pikantni kulata ryze s kousky rybich filetu {okoun, makrela, treska} zeleninou a zelenymi bylinkami, citron, salatek 155</li><li>Spagety chobotnici, kalamary, cerstvym fenyklem, cherry rajcaty a petrzelkovym pestem }L} 185</li><li>Thajske pomalu dusene veprove s ananasem, arasidy a chilli, jasminova ryze, salatek  155</li><li>Italske houbove rizoto se srncim rostbifem a lanyzovym olejem, salatek 179</li><li>Cuketovo-dynove placicky s petrzelkou a goudou, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
 </td>
 </tr>
 </table>
