--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.09.2022 08:11:20</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.09.2022 09:20:55</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Středa, 07. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Bramborová se zázvorem a koriandrem</strong>
+<strong>Polévka ze žluté čočky s kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem NEBO těstovinou</strong>
+<strong>1/2 pečeného kuřátka s pečeným bramborem a baby mrkvičkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							149,-
+						</span>
+</p>
+<p>
+<strong>Hrachová kaše s klobásou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
+						</span>
+</p>
+<p>
+<strong>Okouník nilský s červenou čočkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Pikantní Tomatová fazole se zeleninou a kuřecím masem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							145,-
-						</span>
-</p>
-<p>
-<strong>Caesar salát s kuřecím masem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							145,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Tilapie na Smetanové cibulce a slanině, pečený brambor, ryze, zelenina, kuřecí špalky</strong>
+<strong>TEPLÝ BUFET: mrkev, zelenina, rýže, vepřové koleno</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kuskus se zeleninou a žampiony, rajčatový</strong>
+<strong>SALÁTY: okurkový s česnekovým jogurtem, fazolový se zeleninou a chilli dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -59,7 +59,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 7.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Čokoládový Pařížský dort </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Jogurtová bábovka s kokosem</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, ostružinami a drobenkou</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová bramborová polévka s houbami v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová bramborová polévka s houbami samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí kari, pečená zelenina, jasmínová rýže, koriandr, sezam <em title="Ryby">4</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Plněný paprikový lusk, rajská omáčka, tarhoňa, kerblík <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Gratinovaná brokolice, opečený brambor, zelný salát s červenou řepou <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -95,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thieboudienne – senegalska pikantni kulata ryze s kousky rybich filetu {okoun, makrela, treska} zeleninou a zelenymi bylinkami, citron, salatek 155</li><li>Spagety chobotnici, kalamary, cerstvym fenyklem, cherry rajcaty a petrzelkovym pestem }L} 185</li><li>Thajske pomalu dusene veprove s ananasem, arasidy a chilli, jasminova ryze, salatek  155</li><li>Italske houbove rizoto se srncim rostbifem a lanyzovym olejem, salatek 179</li><li>Cuketovo-dynove placicky s petrzelkou a goudou, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 155</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Pomalu dusene hovezi ve sladke omacce s hoisin, zazvorem a korenim peti vuni, jasminova ryze, salatek 155</li><li>Bramborove gnocchi s trhanou danci pleci pecenou na divokem koreni, s pecenymi slovenskymi pikantnimi paprikami a zralou goudou, salatek {L} 175</li><li>Grilovane kebaby z tempehu a lilku s bylinkovou tahini, hraskovy pilaf z kulate ryze, salatek 155</li></ol>
 </td>
 </tr>
 </table>
