Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.09.2022 08:30:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.09.2022 09:04:47</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 9.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Čokoládový muffin s ostružinovým krémem </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Pórkový krém, v menu </div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Pórkový krém, samostatně</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí quesadilla, bbq omáčka, sýr cheddar, míchaný zeleninový salát, bylinkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Špagety se smetanovou omáčkou, citron, estragon, parmazán</div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -95,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho pstruha s kaparovym maslem, stouchane brambory s porkem, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory s porkem, salatek z cervene repy 179</li><li>Indicka kruti korma s pecenou dyni, orisky, rajcaty a kokosovym mlekem, jasminova ryze 155</li><li>Wrap s uzenymi veprovymi licky, spicatym zelim a rajcetem, krenova jogurtova omacka, pecene brambory, salatek 175</li><li>Ratatouille z pecene letni zeleniny a bylinek, sazene vejce, pecene brambory 155</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou, citron {L} 155</li><li>Peceny filet z cerstve prazmy a morskeho vlka s ratatouille z pecene zeleniny, korenena ryze, salatek 179</li><li>Smazene psenicne nudle s veprovym masem, letni zeleninou, thajskou bazalkou a arasidy s krupavou cibulkou, korejsky mrkvovy salat s chilli {L} 155</li><li>Smazeny rizek z krutich prsou, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou, citron {L} 175</li><li>Indicky dal z cervene cocky s gaj coj, rajcaty a zelenym koriandrem, sazene vejce, bramborove placky, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
